[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/MalekaraiMalekha/MalekaraiMalekha.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/SpellCaster/SpellCaster.png" type="Texture" id=2]
[ext_resource path="res://Entities/MalekaraiMalekha/MalekaraiMalekhaController.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 11.5 )

[node name="MalekaraiMalekha" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="MalekaraiMalekhaProperties" type="Node" parent="."]

[node name="MalekaraiMalekhaController" type="Node" parent="."]
script = ExtResource( 3 )

[node name="SpellCastingPoint" type="Node2D" parent="."]

[node name="SpellCastingPoint2" type="Node2D" parent="."]

[node name="SpellCastingPoint3" type="Node2D" parent="."]

[node name="SpellCastingPoint4" type="Node2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( -3, -11 )
